# zk-clob

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  PROTOCOL.md  README.md
contracts/: foundry.toml
contracts/src/: IZkClob.sol  PatriciaProof.sol  ZkClob.sol
contracts/test/: PatriciaProof.t.sol  ZkClob.t.sol
contracts/test/mocks/: MockERC20.sol  MockSP1Verifier.sol  RevertingReceiver.sol
crates/core/: Cargo.toml
crates/core/src/: consts.rs  errors.rs  hashing.rs  lib.rs  matching.rs  settlement.rs  smt.rs  state.rs  validation.rs
crates/core/src/settlement/: assets.rs  deposits.rs  errors.rs  forced_withdrawals.rs  matching.rs  mod.rs  nonces.rs  output.rs  validation.rs  withdrawals.rs
crates/core/src/trees/: dmt.rs  mod.rs  patricia.rs  smt.rs  smt_empty_hashes.rs
crates/core/src/types/: account.rs  batch.rs  config.rs  deposit.rs  forced_withdrawal.rs  identifiers.rs  mod.rs  order.rs  signature.rs  trade.rs  withdrawal.rs
crates/core/tests/: properties.rs  settlement.rs
crates/guest/: Cargo.toml
crates/guest/src/: main.rs
crates/host/: Cargo.toml  build.rs
crates/host/src/: account_tree.rs  batch_builder.rs  error.rs  lib.rs  main.rs
crates/host/tests/: batch_builder.rs  guest.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
testdata/: old-program-vkey.txt  program-vkey.txt
