[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/guest",
    "crates/host",
    "crates/test-utils",
]

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-6.2.0" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.30.0-sp1-6.2.0" }
